Add "forEach(java.util.stream.Stream,java.util.function.Consumer)" method in "org.springframework.context.support.VoiceManagerPdfPanelTest" class Update "actionPerformed4(java.lang.Object)" method in "org.springframework.context.support.VoiceManagerPdfPanel" class Update "testNull()" method in "org.springframework.context.support.VoiceManagerPdfPanelTest" class